# WiSenseOS

./: .gitignore  AIOS_MASTER_PLAN.md  AUDIT_CHECKLIST.md  README.md  WISENSE_OS_MASTER_PLAN.md  pyproject.toml  run_engine.py  start_wisense_os.ps1
client/: README.md  pubspec.yaml
client/lib/: main.dart
client/lib/core/engine/: engine_models.dart  wisense_engine_client.dart
client/lib/core/voice/: voice_input.dart
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
config/: model_profiles.json
tests/: test_agentic_explore.py  test_aios_framework.py  test_api_auth.py  test_bootstrap.py  test_budget.py  test_delete_task.py  test_diagnostics_and_stream.py  test_edit_plan.py  test_explore.py  test_file_finder.py  test_foundation.py  test_git_commit.py  test_intent.py  test_intent_api.py  test_model_adapter.py  test_patch_executor.py  test_patch_limits.py  test_patch_protocol.py  test_plan.py  test_project_resolution.py  test_proposal.py  test_pytest_runner_isolation.py  test_qualification.py  test_qualification_corpus.py  test_standalone_engine.py  test_workspace.py
wisense_os/: __init__.py  agentic_explore.py  api.py  bootstrap.py  bridge.py  budget.py  context.py  contracts.py  executor.py  exploration_tools.py  explore.py  file_finder.py  intent.py  model_adapter.py  model_policy.py  patch_executor.py  patch_limits.py  patch_protocol.py  plan.py  project_resolution.py  proposal.py  qualification.py  router.py  service.py  skills.py  store.py  workspace.py
(+17 files in other folders)
