[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wisense-os"
version = "0.1.0"
description = "Durable local-first task coordination for WiSense OS"
requires-python = ">=3.11"
dependencies = ["flask>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

